// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rectangle > behaviour > draws rect with mousemove 1`] = `
<body>
  <div>
    <rect
      class="shape"
      height="100"
      width="100"
      x="0"
      y="0"
    />
    <rect
      class="hitbox"
      height="136"
      width="136"
      x="-18"
      y="-18"
    />
    <rect
      class="bounding"
      height="104"
      width="104"
      x="-2"
      y="-2"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Rectangle > rendering > renders with given drawingGeometry 1`] = `
<body>
  <div>
    <rect
      class="shape too-small"
      height="0"
      width="0"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Rectangle > rendering > renders with the given geometry 1`] = `
<body>
  <div>
    <rect
      class="shape"
      height="300"
      width="200"
      x="100"
      y="100"
    />
    <rect
      class="hitbox"
      height="336"
      width="236"
      x="82"
      y="82"
    />
    <rect
      class="bounding"
      height="304"
      width="204"
      x="98"
      y="98"
    />
    
    
    
    
  </div>
</body>
`;

exports[`Rectangle > rendering > renders with the given key and selected state 1`] = `
<body>
  <div>
    <rect
      class="shape"
      height="300"
      width="200"
      x="100"
      y="100"
    />
    <rect
      class="hitbox"
      height="336"
      width="236"
      x="82"
      y="82"
    />
    <rect
      class="bounding"
      height="304"
      width="204"
      x="98"
      y="98"
    />
    
    <g
      class="resize-hitbox-container"
    >
      <rect
        class="resize-square"
        height="10"
        width="10"
        x="293"
        y="393"
      />
      <rect
        class="resize-hitbox"
        height="88"
        width="88"
        x="254"
        y="354"
      />
    </g>
    
    
    
  </div>
</body>
`;
